    - Use libgeom on FreeBSD to detect partitions (closes: #612128).
    - Copy the partition table zone if floppy support is disabled, even if
      no partition table is found (LP: #741867).
    - Fix an ext2 overflow affecting inodes past 2TiB.
    - Fix RAID-0 disk size calculation for metadata 1.x (LP: #743136).
  * Merge from Ubuntu:
    - Build with gcc-4.5 on ppc64.

 -- Colin Watson <cjwatson@debian.org>  Mon, 28 Mar 2011 23:47:28 +0100

grub2 (1.99~rc1-6) unstable; urgency=low

  * Cherry-pick from upstream:
    - Fix crash when extending menu entry line beyond 79 characters (closes:
      #615893).
    - Account for FreeBSD module headers when calculating allocation size.
    - Switch back to framebuffer page zero before loading the kernel
      (thanks, Felix Kuehling).
  * Merge from Ubuntu:
    - If we're upgrading and /boot/grub/core.img doesn't exist, then don't
      ask where to install GRUB, since it probably means we're in some kind
      of specialised environment such as a live USB stick (LP: #591202).
    - Drop the default priority of grub2/linux_cmdline to medium.  We only
      need to ask it if we're upgrading from GRUB Legacy and found an empty
      kopt in menu.lst (LP: #591202).
  * Update branch_embed-sectors.patch, avoiding consuming lots of space and
    time if the first partition is not near the start of the disk (closes:
    #619458, LP: #691569).

 -- Colin Watson <cjwatson@debian.org>  Fri, 25 Mar 2011 19:23:04 +0000

grub2 (1.99~rc1-5) unstable; urgency=low

  * Update debian/legacy/update-grub to the version from grub 0.97-65.
  * Mark binary packages as Multi-Arch: foreign (for example, an amd64
    kernel installed on an i386 system could use the native architecture's
    GRUB).
  * Rewrite find_root_device_from_mountinfo to cope with move-mounts
    (LP: #738345).

  [ Updated translations ]
  * Esperanto (Felipe Castro).  Closes: #606524
  * Thai (Theppitak Karoonboonyanan).  Closes: #607706
