@@ -10,6 +10,8 @@ grub2 (1.99~rc1-7) UNRELEASED; urgency=low
     - Fix RAID-0 disk size calculation for metadata 1.x (LP: #743136).
   * Merge from Ubuntu:
     - Build with gcc-4.5 on ppc64.
+    - Add apport hook for ProblemType = 'Package', thanks to Jean-Baptiste
+      Lallement (LP: #591753).
 
  -- Colin Watson <cjwatson@debian.org>  Mon, 28 Mar 2011 23:47:28 +0100
 
